# x264

./: configure
aircore/: CMakeLists.txt  run_config.sh
